Added personalized content

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Rx Reminder</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Remind your patients to take their meds.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -162,7 +162,7 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$0</h3> <p>of $1000</p>
                 </div>
               </div>
               <div class="span4">
@@ -204,17 +204,14 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	    Make sure your patients *take* the meds you prescribe!  Using
+	    our service, you can automatically have SMS messages or phone
+	    calls made to your patients to remind them to take their 
+	    medicine.  Prescriptions are no good unless the patient takes 
+	    them according to your schedule.  Just add your patient's home
+	    or mobile number, and the schedule for their medication and 
+	    we'll take care of the rest.  Patient privacy guaranteed. We
+	    don't need to know the medication type or your patient's name.
           </p>
         </div>
       </div>
